--- a/src/app/pages/post/preview-post-test/preview-post-test.page.html
+++ b/src/app/pages/post/preview-post-test/preview-post-test.page.html
@@ -27,6 +27,7 @@
             #mediaElement
             *ngIf="isVideoList[i]" 
             class="movable-image"
+            playsinline
             >
               <source [src]="image" type="video/mp4">
             </video>
