--- a/src/app/core/components/image-cropper/image-cropper.component.html
+++ b/src/app/core/components/image-cropper/image-cropper.component.html
@@ -37,7 +37,8 @@
       </div>
       
       
-      <video *ngIf="photo['mediaType'] === 'V' " controls style="width: 100%; height: 500px;">
+      <video *ngIf="photo['mediaType'] === 'V' " controls style="width: 100%; height: 500px;"
+      playsinline>
         <source [src]="photo.filePath" type="video/mp4">
       </video>
       
