--- a/src/app/pages/post/preview-post/preview-post.component.html
+++ b/src/app/pages/post/preview-post/preview-post.component.html
@@ -41,7 +41,8 @@
     <ion-slide *ngFor="let photo of fileToUpload" style="display: block; height: auto;">
       <ion-card style="height: 500px; margin: 0px;">
 
-        <video *ngIf="photo['mediaType'] === 'V' " class="video" controls style="width: 100%; height: 100%; object-fit: cover;">
+        <video *ngIf="photo['mediaType'] === 'V' " class="video" controls 
+        playsinline style="width: 100%; height: 100%; object-fit: cover;">
           <source [src]="photo.filePath" type="video/mp4">
         </video>
 
