--- a/src/app/pages/post/preview-post-test/preview-post-test.page.html
+++ b/src/app/pages/post/preview-post-test/preview-post-test.page.html
@@ -63,7 +63,7 @@
   </div>
 
   <ion-button shape="round" expand="block"
-  (click)="addPost()"
+  (click)="addPostSelector()"
   color="primary" 
   style="height: 53px;
   font: normal normal bold 16px/24px SF Pro Display; letter-spacing: 0.25px; color: #FFFFFF;"
