--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -126,7 +126,11 @@
             >
               <!-- Connection request button -->
               <ion-button
-                style="width: 40px; height: 40px;"
+                style="width: 43px; height: 40px;border-top-width: 0px;
+                border-right-width: 0px;
+                border-right-width: 0px;
+                border-left-width: 0px;
+                border-bottom-width: 00px;"
                 class="translucent-button"
                 shape="round"
                 size="small"
