--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.html
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.html
@@ -37,6 +37,10 @@
       </div>
     </ion-slide>
   </ion-slides>
+  <ion-icon class="mediaCancel" name="close-circle" style="font-size: 43px; background-color: white;
+    border-radius: 50%;"
+  (click)="removeMedia()"></ion-icon>
+  
   <div class="video-controls" *ngIf="isVideo">
     <div class="playpause" (click)="togglePlayPause()">
       <ion-icon *ngIf="isPlaying" name="pause"></ion-icon>
