--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
@@ -52,8 +52,14 @@
 
   //video controls
 
+  .mediaCancel{
+    position: absolute;
+    display: flex;
+    top: 12px;
+    left: 12px;
+    z-index: 4;
+  }
 
-  
   .controls {
     display: flex;
     flex-direction: column;
