--- a/src/app/pages/home/free-user-canvas/edit-trait-page/edit-trait-page.component.html
+++ b/src/app/pages/home/free-user-canvas/edit-trait-page/edit-trait-page.component.html
@@ -5,7 +5,7 @@
       </ion-back-button>
     </ion-buttons>
     <ion-title>
-      <!-- <span *ngIf="paramsData.isDonationPost">Donation Request</span> -->
+      <!-- <span *ngIf=".isDonationPost">Donation Request</span> -->
       <span>Edit Trait</span>
     </ion-title>
   </ion-toolbar>
