--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -4,8 +4,10 @@
       style="position: relative;height: 100%;width:100%; overflow: hidden;">
       <div class="top-result-container" style="width: 95%;">
         <div class="c-fab-button" *ngIf="searchCriteria" style="width: 290px;">
-          <div (click)="showSonarSearchResultInListView(true)"> {{resultCount}}
-            results </div>
+          <!-- <div (click)="showSonarSearchResultInListView(true)"> {{resultCount}}
+            results </div> -->
+            <div (click)="navigateToResult2()"> {{resultCount}}
+              results </div>
           <div style="line-height: 11px;">
             <ion-icon style="font-size: 24px;" name="refresh-outline"
               (click)="refreshMarkerOne()"></ion-icon>
@@ -14,8 +16,7 @@
             <ion-icon style="font-size: 16px;margin-right: 10px;"
               name="close-icon" (click)="clearResults(true)"></ion-icon>
           </div>
-        </div>
-
+        </div> 
         <!-- *ngIf="_commonService?.viewingUsers?.length" -->
 
         <!--removed viewing functionality  -->
@@ -51,6 +52,7 @@
         </div>
 
       </div>
+      
       <div
         style="height: 100%; display: flex; flex-direction: column; justify-content: center; text-align: center; align-items: center;"
         *ngIf="!isLocationTurnedOn && isNativeLocationOn == true">
@@ -101,7 +103,8 @@
             name="sonar-make-visible"></ion-icon>
         </ion-fab-button>
         <!-- Visibe Icon -->
-
+        
+        
         <!-- Create Totem Icon -->
         <!-- <ion-fab-button (click)="gotocreatetotem()" class="map-fab-button2">
           <ion-icon style="font-size: 28px;" name="create-totem"></ion-icon>
