--- a/src/app/pages/sidemenu/e-card/e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/e-card.page.html
@@ -1,15 +1,9 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <!-- <ion-button class="backbutton" (click)="OnEcardBack()" slot="start">
-        <ion-icon name="arrow-back-outline"></ion-icon>
-      </ion-button> -->
-      <ion-back-button
-      icon="back-button"
-      class="translucent-button2"
-      slot="start"
-      (click)="OnEcardBack()" 
-    ></ion-back-button>
+      <ion-button class="activated" (click)="goBack()" >
+        <ion-icon name="back-button"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>e-Card</ion-title>
     <ion-buttons slot="end">
@@ -26,9 +20,9 @@
       <ion-card-header>
         <ion-avatar>
         
-            <!-- <img [src]="userProfile.user.ProfileImage" onError="this.src='assets/icons/business/anonymous.svg'" /> -->
+            <!-- <img [src]="userProfile.user.ProfileImage" onError="this.src='assets/icons/business/anonymous2.svg'" /> -->
             <img src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"style="width: 100%; height:100%; object-fit: cover;"
-            onError="this.src='assets/icons/business/anonymous.svg'" onError="this.src='assets/icons/business/anonymous.svg'" />
+            onError="this.src='assets/icons/business/anonymous2.svg'" onError="this.src='assets/icons/business/anonymous2.svg'" />
           
         </ion-avatar>
         
